--- a/config/projects.toml
+++ b/config/projects.toml
@@ -1,6 +1,6 @@
 [[project]]
-title = "Flutter Cinemapedia App"
-category = "Mobile development"
+title = "Speech Therapy Application"
+category = "App development"
 image = "https://i.imgur.com/ANDVQ4o.png"
 url = "https://github.com/ivansaul/flutter_cinemapedia_app#screenshots"
 
