--- a/config/resume.toml
+++ b/config/resume.toml
@@ -1,18 +1,18 @@
 ############## Education config #################
 #################################################
 [[education]]
-title = "High school of art and design"
-timeline = "2002 — 2004"
+title = "Jaihind High school, Dhule"
+timeline = "2017 — 2018"
 description = "Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur magni dolores eos."
 
 [[education]]
-title = "New york academy of art"
-timeline = "2006 — 2007"
+title = "Dr. J. K. Wani Jr. College, Dhule"
+timeline = "2019 — 2020"
 description = "Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est omnis.."
 
 [[education]]
-title = "University school of the arts"
-timeline = "2007 — 2008"
+title = "Vishwakarma Institute of Information Technology, Pune"
+timeline = "2021 — 2024"
 description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
 
 
@@ -43,7 +43,7 @@ show_bar = true
 show_value = true
 
 [[skill]]
-title = "Web design"
+title = "Web Development"
 value = "80%"
 
 [[skill]]
@@ -67,9 +67,9 @@ show_bar = true
 show_value = true
 
 [[language]]
-title = "Ingles"
+title = "English"
 value = "60%"
 
 [[language]]
-title = "French"
+title = "Hindi"
 value = "50%"
