--- a/config/resume.toml
+++ b/config/resume.toml
@@ -3,34 +3,31 @@
 [[education]]
 title = "Jaihind High school, Dhule"
 timeline = "2017 — 2018"
-description = "Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur magni dolores eos."
+description = "SSC - 91.80%"
 
 [[education]]
 title = "Dr. J. K. Wani Jr. College, Dhule"
 timeline = "2019 — 2020"
-description = "Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est omnis.."
+description = "HSC (PCM) - 77.69, 
+MHTCET - 97.11%ile, 
+JEE Mains - 93.61%ile"
 
 [[education]]
 title = "Vishwakarma Institute of Information Technology, Pune"
 timeline = "2021 — 2024"
-description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
+description = "CGPA - 9.23"
 
 
 ############## Experience config ################
 #################################################
 [[experience]]
-title = "Web designer"
-timeline = "2010 — 2013"
+title = "Technical and Project Team @VIIT IoT Forum"
+timeline = "2021 — 2022"
 description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
 
 [[experience]]
-title = "Art director"
-timeline = "2013 — 2015"
-description = "Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et quas molestias exceptur."
-
-[[experience]]
-title = "Creative director"
-timeline = "2015 — Present"
+title = "Software Developer Intern @NxtPe"
+timeline = "2024 — Present"
 description = "Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas molestias exceptur."
 
 
@@ -39,20 +36,20 @@ description = "Nemo enim ipsam voluptatem blanditiis praesentium voluptum deleni
 [skills] 
 title = "My Skills"
 enabled = true
-show_bar = true
-show_value = true
+show_bar = false
+show_value = false
 
 [[skill]]
 title = "Web Development"
-value = "80%"
-
-[[skill]]
-title = "Graphic design"
 value = "70%"
 
 [[skill]]
-title = "Branding"
+title = "App Development"
 value = "90%"
+
+[[skill]]
+title = "Data Structure and Algorithm"
+value = "80%"
 
 [[skill]]
 title = "WordPress"
@@ -63,8 +60,8 @@ value = "50%"
 [languages]
 title = "Languages"
 enabled = true
-show_bar = true
-show_value = true
+show_bar = false
+show_value = false
 
 [[language]]
 title = "English"
