--- a/config/social.toml
+++ b/config/social.toml
@@ -2,11 +2,11 @@
 # <ion-icon name="[[name]]"></ion-icon>
 # name = "https://example.com/"
 
-logo-facebook = "https://facebook.com/"
-logo-twitter = "https://twitter.com/"
-logo-instagram = "https://instagram.com/"
-logo-linkedin = "https://www.linkedin.com/"
-logo-github = "https://github.com/ivansaul"
+# logo-facebook = "https://facebook.com/"
+# logo-twitter = "https://twitter.com/"
+# logo-instagram = "https://instagram.com/"
+logo-linkedin = "https://www.linkedin.com/in/niraj-amrutkar/"
+logo-github = "https://github.com/Niraj2003"
 logo-dribbble = "https://dribbble.com/"
 # logo-figma = "figma.com/"
 # logo-youtube = "https://youtube.com/"
