--- a/config/social.toml
+++ b/config/social.toml
@@ -3,11 +3,11 @@
 # name = "https://example.com/"
 
 # logo-facebook = "https://facebook.com/"
-# logo-twitter = "https://twitter.com/"
+logo-twitter = "https://twitter.com/AmrutkarNiraj"
 # logo-instagram = "https://instagram.com/"
 logo-linkedin = "https://www.linkedin.com/in/niraj-amrutkar/"
 logo-github = "https://github.com/Niraj2003"
-logo-dribbble = "https://dribbble.com/"
+# logo-dribbble = "https://dribbble.com/"
 # logo-figma = "figma.com/"
 # logo-youtube = "https://youtube.com/"
 # logo-reddit = "https://www.reddit.com/"
