--- a/config/blog.toml
+++ b/config/blog.toml
@@ -1,47 +1,15 @@
 [[post]]
-category = "Design"
-title = "Design conferences in 2022"
-subtitle = "Veritatis et quasi architecto beatae vitae dicta sunt, explicabo."
-datetime = "2022-02-23"
+category = "Competitive Programming"
+title = "Unleashing the Power of Competitive Programming"
+subtitle = "A Journey into the World of Algorithms and Problem Solving"
+datetime = "2024-01-29"
 image = "./config/assets/posts/blog-1.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
+url = "https://nrj21.hashnode.dev/unleashing-the-power-of-competitive-programming"
 
 [[post]]
 category = "Design"
-title = "Best fonts every designer"
-subtitle = "Sed ut perspiciatis, nam libero tempore, cum soluta nobis est eligendi"
-datetime = "2022-02-23"
+title = "The Need for Speed"
+subtitle = "How Typing Speed Matters for Software Developers"
+datetime = "2024-01-29"
 image = "./config/assets/posts/blog-2.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
-
-[[post]]
-category = "Design"
-title = "Design digest #80"
-subtitle = "Excepteur sint occaecat cupidatat no proident, quis nostrum exercitationem ullam corporis suscipit"
-datetime = "2022-02-23"
-image = "./config/assets/posts/blog-3.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
-
-[[post]]
-category = "Design"
-title = "UI interactions of the week"
-subtitle = "Enim ad minim veniam, consectetur adipiscing elit, quis nostrud exercitation ullamco laboris nisi"
-datetime = "2022-02-23"
-image = "./config/assets/posts/blog-4.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
-
-[[post]]
-category = "Design"
-title = "The Forgotten Art Of Spacing"
-subtitle = "Maxime placeat, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua"
-datetime = "2022-02-23"
-image = "./config/assets/posts/blog-5.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
-
-[[post]]
-category = "Design"
-title = "Design Digest #79"
-subtitle = "Optio cumque nihil impedit uo minus quod maxime placeat, velit esse cillum"
-datetime = "2022-02-23"
-image = "./config/assets/posts/blog-6.jpg"
-url = "https://ivansaul.netlify.app/posts/programming/quarto/using_python_in_quarto.html"
+url = "https://nrj21.hashnode.dev/the-need-for-speed"
